--- a/Calendário/css/Estilo_Calend.css
+++ b/Calendário/css/Estilo_Calend.css
@@ -75,8 +75,7 @@
       font-size: 92px; }
 
     .calendar .add-event-day {
-      border-bottom: 2px solid #ffffff; 
-      border-top: 2px solid white; 
+      border: 0px;
     }
 
       .calendar .add-event-day .add-event-day-field {
@@ -105,7 +104,12 @@
           padding: 5px 0px;
           text-align: center;
           border-radius: 6px;
-  
+        }
+
+        .calendar .add-event-day .add-event-day-field-btn:hover {
+          background-color: rgb(0, 0, 0);
+          color: rgb(255, 255, 255);
+          border: 1px solid rgb(255, 255, 255);
         }
 
     .calendar .right-side {
