--- a/Calendário/css/Style-Agend-Modal.css
+++ b/Calendário/css/Style-Agend-Modal.css
@@ -25,6 +25,12 @@
     
 }
 
+select.form-control {
+    background-color: #868686;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+}
 
 
 
