--- a/Calendário/css/Style-Agend.css
+++ b/Calendário/css/Style-Agend.css
@@ -198,3 +198,103 @@ header .navigation li a:hover{
     font-weight: 500;
     text-decoration: none;
 }
+
+
+
+
+
+
+
+
+/* MODAL AGENDAMENTO */
+.cabecalhoModal {
+    background-color: #868686;
+}
+
+.cabecalhoModal h3{
+    color: white;
+    
+}
+
+.btn-close {
+    position: absolute;
+    font-size: 25px;
+    right: 20px;
+    background-color: white;
+}
+
+.tituloAgend {
+    padding-bottom: 5px; 
+    padding-top: 5px; 
+    font-size: 30px; 
+    background-color: #868686;
+    text-align: center;
+    color: white;
+    
+}
+
+select.form-control {
+    background-color: #868686;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.cliqueAqui {
+    color: black;
+    position: relative;
+    font-size: 2px;
+
+}
+
+
+
+
+
+/* Parte 02 do Formulário Style */
+
+.formulario{
+    border: 2px solid black; 
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 900px;
+    margin-left: 90px;
+}
+
+.campoForm2 label{
+    color: #fff;
+    font-size: 22px;
+}
+
+.campoForm2 input{
+    color: black;
+    font-family: 'Calibri';
+    font-size: 20px;
+    padding: 0px 0px 0px 5px;
+    width: 325px;
+    margin-bottom: 10px;
+}
+
+/* Responsivo Form.prt2 */
+@media screen and (max-width: 380px){
+    #exampleModal {
+        margin-bottom: 10px;
+    }
+
+    .formulario{
+        width: 290px;
+        margin-left: 0px;
+    }
+
+    .campoForm2 label{
+        font-size: 18px;
+    }
+
+    .campoForm2 input{
+        font-size: 18px;
+        width: 225px;
+        margin-bottom: 10px;
+    }
+}
+
+
