--- a/Calendário/css/Style-Agend.css
+++ b/Calendário/css/Style-Agend.css
@@ -258,7 +258,8 @@ select.form-control {
     border: 2px solid black; 
     background-color: rgba(0, 0, 0, 0.5);
     width: 900px;
-    margin-left: 90px;
+    margin-left: 88px;
+    margin-bottom: 30px;
 }
 
 .campoForm2 label{
@@ -282,8 +283,8 @@ select.form-control {
     }
 
     .formulario{
-        width: 290px;
-        margin-left: 0px;
+        width: 280px;
+        margin-left: -5px;
     }
 
     .campoForm2 label{
@@ -297,4 +298,89 @@ select.form-control {
     }
 }
 
+
+.footer {
+    height: 80px;
+    padding: /*top*/15px /*left*/10px /*bottom*/15px /*rigth*/150px;
+}
+
+@media screen and (max-width: 380px){
+    .footer {
+        height: 170px;
+        padding: /*top*/25px /*left*/10px /*bottom*/25px /*rigth*/15px;
+    }
+}
+
+/*Codigo do botão*/
+.btn {
+line-height: 0px;
+height: 50px;
+text-align: center;
+width: 250px;
+cursor: pointer;
+font-size: 18px;
+}
+
+
+.efeito-btn {
+color: rgb(150, 20, 20);
+transition: all 0.5s;
+position: relative;
+margin-right: 15px;
+margin-left: 35px;
+
+}
+
+@media screen and (max-width: 380px){
+    .efeito-btn {
+        margin-right: 0px;
+        margin-left: 0px;     
+    }
+
+    .btn {
+        margin-top: 15px;
+    }
+}
+
+.efeito-btn::before {
+content: '';
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 1;
+background-color: rgba(119, 2, 2, 0.2);
+/*background-color: #ff0157;*/
+transition: all 0.3s;
+
+}
+
+.efeito-btn:hover::before {
+opacity: 0 ;
+transform: scale(0.5,0.5);
+
+}
+
+.efeito-btn::after {
+content: '';
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 1;
+opacity: 0;
+transition: all 0.3s;
+border: 1px solid #ff0157;
+transform: scale(1.2,1.2);
+
+
+}
+
+.efeito-btn:hover::after {
+opacity: 1;
+transform: scale(1,1);
+
+}
 
