--- a/Calendário/css/Style-Agend.css
+++ b/Calendário/css/Style-Agend.css
@@ -63,7 +63,7 @@ header .logo
 
 header .logo:hover
 {
-    color: #ff0157;
+    color: #868686;
 }
 
 header.sticky .logo /* Não pode espaço em "header.stick"!!!*/
@@ -73,7 +73,7 @@ header.sticky .logo /* Não pode espaço em "header.stick"!!!*/
 
 header .logo span
 {
-    color: #ff0157;
+    color: #868686;
 }
 
 header .navigation
@@ -104,7 +104,7 @@ header.sticky .navigation li a
 }
 
 header .navigation li a:hover{
-    color: #ff0157;
+    color: #868686;
 }
 
 ::-webkit-scrollbar-track
@@ -148,7 +148,7 @@ header .navigation li a:hover{
 }
 
 .titleText span {
-    color: #ff0157;
+    color: #000;
     font-weight: 700;
     font-size: 1.5em;
 }
@@ -194,7 +194,7 @@ header .navigation li a:hover{
 
 .copyrightText a
 {
-    color:#ff0157;
+    color:#000;
     font-weight: 500;
     text-decoration: none;
 }
@@ -372,7 +372,7 @@ height: 100%;
 z-index: 1;
 opacity: 0;
 transition: all 0.3s;
-border: 1px solid #ff0157;
+border: 1px solid #000;
 transform: scale(1.2,1.2);
 
 
