--- a/Calendário/css/Style-Agend.css
+++ b/Calendário/css/Style-Agend.css
@@ -177,7 +177,20 @@ header .navigation li a:hover{
     }
 }
 
+@media screen and (max-width: 380px){
 
+    .agenda {
+        height: 880px;
+    }
+
+    .titleText {
+        left: 30%;
+    }
+
+    .PainelAG {
+        left: 0%;
+    }
+}
 
 .copyrightText
 {
@@ -197,6 +210,7 @@ header .navigation li a:hover{
     color:#000;
     font-weight: 500;
     text-decoration: none;
+    font-size: 18px;
 }
 
 
@@ -208,7 +222,7 @@ header .navigation li a:hover{
 
 /* MODAL AGENDAMENTO */
 .cabecalhoModal {
-    background-color: #868686;
+    background-color: #000000;
 }
 
 .cabecalhoModal h3{
@@ -227,7 +241,7 @@ header .navigation li a:hover{
     padding-bottom: 5px; 
     padding-top: 5px; 
     font-size: 30px; 
-    background-color: #868686;
+    background-color: #000000;
     text-align: center;
     color: white;
     
@@ -283,7 +297,7 @@ select.form-control {
     }
 
     .formulario{
-        width: 280px;
+        width: 295px;
         margin-left: -5px;
     }
 
