--- a/Calendário/css/Style-Agend.css
+++ b/Calendário/css/Style-Agend.css
@@ -282,12 +282,21 @@ select.form-control {
 }
 
 .campoForm2 input{
+    position: static;
     color: black;
     font-family: 'Calibri';
     font-size: 20px;
     padding: 0px 0px 0px 5px;
     width: 325px;
     margin-bottom: 10px;
+}
+
+.barreira {
+    position: absolute;
+    background-color: rgb(0, 0, 0, 0.2);
+    width: 327px;
+    height: 36px;
+    bottom: 333px;
 }
 
 /* Responsivo Form.prt2 */
@@ -309,6 +318,12 @@ select.form-control {
         font-size: 18px;
         width: 225px;
         margin-bottom: 10px;
+    }
+
+    .barreira {
+        width: 225px;
+        height: 32px;
+        bottom: 405px;
     }
 }
 
