--- a/Calendario/css/Style-Agend.css
+++ b/Calendario/css/Style-Agend.css
@@ -296,7 +296,7 @@ select.form-control {
     background-color: rgb(0, 0, 0, 0.2);
     width: 327px;
     height: 36px;
-    bottom: 333px;
+    bottom: 371px;
 }
 
 /* Responsivo Form.prt2 */
@@ -321,9 +321,10 @@ select.form-control {
     }
 
     .barreira {
+        position: absolute;
         width: 225px;
         height: 32px;
-        bottom: 405px;
+        bottom: 403px!important;        
     }
 }
 
