--- a/Calendario/css/Style-Agend.css
+++ b/Calendario/css/Style-Agend.css
@@ -158,6 +158,7 @@ header .navigation li a:hover{
     background-color: #333;
     width: 100%;
     height: 650px;
+    top: -100px;
 }
 
 .PainelAG {
@@ -358,7 +359,7 @@ div.mostrar-011 p{
 
 
 .tituloAgend {
-    padding-bottom: 5px; 
+    padding-bottom: 30px; 
     padding-top: 5px; 
     font-size: 30px; 
     background-color: #000;
